--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Magna</h2>
+										<h2>Coding Projects</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Projects in Java, JavaScript, Python, ActionScript, and more</p>
 										</div>
 									</a>
 								</article>
@@ -72,9 +72,9 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Lorem</h2>
+										<h2>Photography Projects</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>My favorite snapshots!</p>
 										</div>
 									</a>
 								</article>
@@ -83,9 +83,9 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Feugiat</h2>
+										<h2>Graphic Design Projects</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Designs made with Photoshop and Illustrator</p>
 										</div>
 									</a>
 								</article>
