--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="generic.html">
 										<h2>Coding Projects</h2>
 										<div class="content">
-											<p>Projects in Java, JavaScript, Python, ActionScript, and more</p>
+											<p>Projects in Java, JavaScript, Python, ActionScript, and more.</p>
 										</div>
 									</a>
 								</article>
