--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 									<a href="generic.html">
 										<h2>Graphic Design Projects</h2>
 										<div class="content">
-											<p>Designs made with Photoshop and Illustrator</p>
+											<p>Designs made with Photoshop and Illustrator.</p>
 										</div>
 									</a>
 								</article>
