--- a/index.html
+++ b/index.html
@@ -55,7 +55,10 @@
 								Tjoa</h1>
 								<p>Data Science, Photography, Graphic Design</p>
 							</header>
+
+							<!-- Tiles -->
 							<section class="tiles">
+
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
@@ -67,6 +70,7 @@
 										</div>
 									</a>
 								</article>
+
 								<article class="style2">
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
@@ -78,6 +82,7 @@
 										</div>
 									</a>
 								</article>
+
 								<article class="style3">
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
