--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,7 +37,14 @@
 											<h1>Madeline Tjoa</h1>
 											<p>Data Scientist</p>
 										</header>
-										<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
+										<p>Hello! My name is Madeline and I am an aspiring
+											 data scientist,
+											  who is also interested in pursuing a career
+												in the computer science industry.
+												I have many interests, and I work hard to be well rounded in many areas.
+												 This site is for people who may have interest in potentially
+												  hiring me and anyone who discovers this site! It contains
+													 the many projects which I have done from grade 8 to today! </p>
 									</div>
 								</section>
 								<section class="tiles">
@@ -46,7 +53,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Visual Projects</h2>
+										<h2>visit Linkedin</h2>
 										<div class="content">
 											<p>Explore Graphics and other artwork</p>
 										</div>
@@ -57,7 +64,7 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Coding Projects</h2>
+										<h2>Java Projects</h2>
 										<div class="content">
 											<p>Languages include Java, Python, JavaScript, and C#.</p>
 										</div>
@@ -68,7 +75,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<a href="generic.html">
-										<h2>Photography</h2>
+										<h2>Photography Snaps</h2>
 										<div class="content">
 											<p>My favorite snapshots!</p>
 										</div>
@@ -84,35 +91,36 @@
 						<div class="inner">
 
 							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="aboutMe.html">About Madeline</a></li>
-										<li>
-											<span class="opener">Coding Projects</span>
-											<ul>
-												<li><a href="java.html">Java</a></li>
-												<li><a href="python.html">Python</a></li>
-												<li><a href="csharp.html">C#</a></li>
-												<li><a href="javascript.html">JavaScript</a></li>
-												<li><a href="flash.html">Flash</a></li>
-												<li><a href="HTML.html">HTML</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">Visual Projects</span>
-											<ul>
-												<li><a href="photography.html">Photography</a></li>
-												<li><a href="illustrator">Illustrator Graphics</a></li>
-												<li><a href="otherArt.html">other Graphics</a></li>
-											</ul>
-										</li>
-										<li><a href="contact.html">Contact</a></li>
-									</ul>
-								</nav>
+							<nav id="menu">
+								<header class="major">
+									<h2>Menu</h2>
+								</header>
+								<ul>
+									<li><a href="index.html">Homepage</a></li>
+									<li><a href="aboutMe.html">About Madeline</a></li>
+									<li>
+										<span class="opener">Coding Projects</span>
+										<ul>
+											<li><a href="java.html">Java</a></li>
+											<li><a href="python.html">Python</a></li>
+											<li><a href="csharp.html">C#</a></li>
+											<li><a href="javascript.html">JavaScript</a></li>
+											<li><a href="flash.html">Flash</a></li>
+											<li><a href="HTML.html">HTML</a></li>
+										</ul>
+									</li>
+									<li>
+										<span class="opener">Visual Projects</span>
+										<ul>
+											<li><a href="photography.html">Photography</a></li>
+											<li><a href="illustrator">Illustrator Graphics</a></li>
+											<li><a href="otherArt.html">other Graphics</a></li>
+										</ul>
+									</li>
+									<li><a href="contact.html">Contact</a></li>
+								</ul>
+							</nav>
+
 
 							<!-- Footer -->
 								<footer id="footer">
