--- a/python.html
+++ b/python.html
@@ -34,8 +34,8 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Java Projects</h1>
-											<p>Data structures and Algorithms in Java</p>
+											<h1>python Projects</h1>
+											<p>downloadable zip of all the projects</p>
 										</header>
 										<p>Projects done in UCSD and intro to Java class</p>
 									</div>
