--- a/csharp.html
+++ b/csharp.html
@@ -210,33 +210,36 @@
 						<div class="inner">
 
 							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">About Madeline</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
-											<span class="opener">Coding Projects</span>
-											<ul>
-												<li><a href="#">Java</a></li>
-												<li><a href="#">Python</a></li>
-												<li><a href="#">C#</a></li>
-												<li><a href="#">JavaScript</a></li>
-											</ul>
-										</li>
-										<li>
-											<span class="opener">Visual Projects</span>
-											<ul>
-												<li><a href="#">Photography</a></li>
-												<li><a href="#">Graphics</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Contact</a></li>
-									</ul>
-								</nav>
+							<nav id="menu">
+								<header class="major">
+									<h2>Menu</h2>
+								</header>
+								<ul>
+									<li><a href="index.html">Homepage</a></li>
+									<li><a href="aboutMe.html">About Madeline</a></li>
+									<li>
+										<span class="opener">Coding Projects</span>
+										<ul>
+											<li><a href="java.html">Java</a></li>
+											<li><a href="python.html">Python</a></li>
+											<li><a href="csharp.html">C#</a></li>
+											<li><a href="javascript.html">JavaScript</a></li>
+											<li><a href="flash.html">Flash</a></li>
+											<li><a href="HTML.html">HTML</a></li>
+										</ul>
+									</li>
+									<li>
+										<span class="opener">Visual Projects</span>
+										<ul>
+											<li><a href="photography.html">Photography</a></li>
+											<li><a href="illustrator">Illustrator Graphics</a></li>
+											<li><a href="otherArt.html">other Graphics</a></li>
+										</ul>
+									</li>
+									<li><a href="contact.html">Contact</a></li>
+								</ul>
+							</nav>
+
 
 							<!-- Footer -->
 								<footer id="footer">
