--- a/flash.html
+++ b/flash.html
@@ -572,7 +572,7 @@
 										<span class="opener">Visual Projects</span>
 										<ul>
 											<li><a href="photography.html">Photography</a></li>
-											<li><a href="illustrator">Illustrator Graphics</a></li>
+											<li><a href="illustrator.html">Illustrator Graphics</a></li>
 											<li><a href="otherArt.html">other Graphics</a></li>
 										</ul>
 									</li>
