--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Visual Projects</h2>
+									<a href="otherArt.html">
+										<h2>Graphic Projects</h2>
 										<div class="content">
 											<p>Explore Graphics and other artwork</p>
 										</div>
@@ -56,8 +56,8 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>Coding Projects</h2>
+									<a href="java.html">
+										<h2>Java Projects</h2>
 										<div class="content">
 											<p>Languages include Java, Python, JavaScript, and C#.</p>
 										</div>
@@ -67,7 +67,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="photography.html">
 										<h2>Photography</h2>
 										<div class="content">
 											<p>My favorite snapshots!</p>
