--- a/contact.html
+++ b/contact.html
@@ -34,47 +34,15 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>Madeline Tjoa</h1>
-											<p>Data Scientist</p>
+											<h1>Contact Madeline</h1>
+											<p>Best way to reach is email!</p>
 										</header>
-										<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
+										<p>Lets connect on Linked in!
+											email:
+										</p>
 									</div>
 								</section>
-								<section class="tiles">
-								<article class="style1">
-									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Visual Projects</h2>
-										<div class="content">
-											<p>Explore Graphics and other artwork</p>
-										</div>
-									</a>
-								</article>
-								<article class="style2">
-									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Coding Projects</h2>
-										<div class="content">
-											<p>Languages include Java, Python, JavaScript, and C#.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>Photography</h2>
-										<div class="content">
-											<p>My favorite snapshots!</p>
-										</div>
-									</a>
-								</article>
-							</section>
+								
 
 						</div>
 					</div>
