--- a/aboutMe.html
+++ b/aboutMe.html
@@ -52,7 +52,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="https://www.linkedin.com/in/madeline-tjoa-39028a160/">
 										<h2>visit Linkedin</h2>
 										<div class="content">
 											<p>Explore Graphics and other artwork</p>
