--- a/otherArt.html
+++ b/otherArt.html
@@ -145,39 +145,13 @@
 								        </article>
 
 								        <article class="card">
-								            <img src="assets/VisualProjects/gifs/bakagouchibiWIthnoBackground.png" alt="photo">
-								            <div class="text">
-								              <h3>Bakagou</h3>
-								            </div>
-								        </article>
-
-								        <article class="card">
-								            <img src="assets/VisualProjects/gifs/bakugoucircle.jpg" alt="photo">
-								            <div class="text">
-								              <h3>Bakagou</h3>
-								            </div>
-								        </article>
-
-								        <article class="card">
 								            <img src="assets/VisualProjects/gifs/bunnybeanie.jpg" alt="photo">
 								            <div class="text">
 								              <h3>Bunnie on beanie</h3>
 								            </div>
 								        </article>
 
-								        <article class="card">
-								            <img src="assets/VisualProjects/gifs/squash.jpg" alt="photo">
-								            <div class="text">
-								              <h3>deku</h3>
-								            </div>
-								        </article>
 
-								        <article class="card">
-								            <img src="assets/VisualProjects/gifs/todorokiOnsie.jpg" alt="photo">
-								            <div class="text">
-								              <h3>totoroki</h3>
-								            </div>
-								        </article>
 
 								        <article class="card">
 								            <img src="assets/VisualProjects/Paper/1.jpg" alt="photo">
@@ -267,7 +241,7 @@
 										<span class="opener">Visual Projects</span>
 										<ul>
 											<li><a href="photography.html">Photography</a></li>
-											<li><a href="illustrator.html">Illustrator Graphics</a></li>
+											<li><a href="illustrator">Illustrator Graphics</a></li>
 											<li><a href="otherArt.html">other Graphics</a></li>
 										</ul>
 									</li>
