--- a/aboutMe.html
+++ b/aboutMe.html
@@ -42,8 +42,7 @@
 											  who is also interested in pursuing a career
 												in the computer science industry.
 												I have many interests, and I work hard to be well rounded in many areas.
-												 This site is for people who may have interest in potentially
-												  hiring me and anyone who discovers this site! It contains
+												 This site contains
 													 the many projects which I have done from grade 8 to today! </p>
 									</div>
 								</section>
@@ -63,7 +62,7 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="java.html">
 										<h2>Java Projects</h2>
 										<div class="content">
 											<p>Languages include Java, Python, JavaScript, and C#.</p>
@@ -74,7 +73,7 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
+									<a href="photography.html">
 										<h2>Photography Snaps</h2>
 										<div class="content">
 											<p>My favorite snapshots!</p>
