--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 											<p>Data Scientist</p>
 										</header>
 										<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
+										<p>Currently working on firebase! https://madeline-website-project.firebaseapp.com/</p>
 									</div>
 								</section>
 								<section class="tiles">
