--- a/aboutMe.html
+++ b/aboutMe.html
@@ -37,7 +37,7 @@
 											<h1>Madeline Tjoa</h1>
 											<p>Data Scientist</p>
 										</header>
-										<p>Hello! My name is Madeline and I am an aspiring
+										<p>Hello! I am an aspiring
 											 data scientist,
 											  who is also interested in pursuing a career
 												in the computer science industry.
