--- a/illustrator.html
+++ b/illustrator.html
@@ -207,7 +207,21 @@
 								            </div>
 								        </article>
 
+												<article class="card">
+								            <img src="assets/VisualProjects/Graphics/envisionariesfbc.png" alt="photo">
+								            <div class="text">
+								              <h3>Envisionaries facebook cover</h3>
+								              <p>Illustrator</p>
+								            </div>
+								        </article>
 
+												<article class="card">
+								            <img src="assets/VisualProjects/Graphics/envisionaries_circle.jpg" alt="photo">
+								            <div class="text">
+								              <h3>Envisionaries sticker logo</h3>
+								              <p>Illustrator</p>
+								            </div>
+								        </article>
 
 
 
