--- a/aboutMe.html
+++ b/aboutMe.html
@@ -44,6 +44,20 @@
 												I have many interests, and I work hard to be well rounded in many areas.
 												 This site contains
 													 the many projects which I have done from grade 8 to today! </p>
+													 <p>Currently jobs:
+														 Data Structures and Algorithms Instructional Assistant: I'm an Instructional Assistant
+														 for a Data Structures and Algorithms course in UCSD.
+														 Language that is used is Java.
+														 Topics covered include: stacks, queues, linked lists, priority queues, heaps, BST, AVL trees,
+														 sorting algorithms, graph traversal (BFS, DFS, Djikstra's, and A*), and Huffman Compression
+														 Responsibilities include assisting students in programming assignments 
+														 and grading programs and exams.
+
+
+	Marketing and Communications Intern
+	Assisting in marketing and communications for the UCSD startup incubator, The Basement. Tasks include maintaining The Basement website, assisting in changes to the javascript code in OIC website, graphic design for marketing materials, and communications.
+</p>
+
 									</div>
 								</section>
 								<section class="tiles">
