--- a/illustrator.html
+++ b/illustrator.html
@@ -34,7 +34,7 @@
 								<section id="banner">
 									<div class="content">
 										<header>
-											<h1>illustrator Projects</h1>
+											<h1>Illustrator Projects</h1>
 											<p>Used illustrator and photoshop</p>
 										</header>
 										<p></p>
@@ -47,6 +47,22 @@
 
 								<main class="cards">
 
+									
+												<article class="card">
+														<img src="assets/VisualProjects/Graphics/envisionariesfbc.png" alt="photo">
+														<div class="text">
+															<h3>Envisionaries facebook cover</h3>
+															<p>Illustrator</p>
+														</div>
+												</article>
+
+												<article class="card">
+														<img src="assets/VisualProjects/Graphics/envisionaries_circle.png" alt="photo">
+														<div class="text">
+															<h3>Envisionaries sticker logo</h3>
+															<p>Illustrator</p>
+														</div>
+												</article>
 								        <article class="card">
 								            <img src="assets/VisualProjects/Graphics/Per05TjoaLetterProject.jpg" alt="photo">
 								            <div class="text">
@@ -207,21 +223,6 @@
 								            </div>
 								        </article>
 
-												<article class="card">
-								            <img src="assets/VisualProjects/Graphics/envisionariesfbc.png" alt="photo">
-								            <div class="text">
-								              <h3>Envisionaries facebook cover</h3>
-								              <p>Illustrator</p>
-								            </div>
-								        </article>
-
-												<article class="card">
-								            <img src="assets/VisualProjects/Graphics/envisionaries_circle.jpg" alt="photo">
-								            <div class="text">
-								              <h3>Envisionaries sticker logo</h3>
-								              <p>Illustrator</p>
-								            </div>
-								        </article>
 
 
 
