--- a/aboutMe.html
+++ b/aboutMe.html
@@ -23,11 +23,6 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Madeline</strong> Tjoa</a>
-									<ul class="icons">
-										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
-									</ul>
 								</header>
 
 							<!-- Banner -->
@@ -44,20 +39,20 @@
 												I have many interests, and I work hard to be well rounded in many areas.
 												 This site contains
 													 the many projects which I have done from grade 8 to today! </p>
-													 <p>Currently jobs:
-														 Data Structures and Algorithms Instructional Assistant: I'm an Instructional Assistant
-														 for a Data Structures and Algorithms course in UCSD.
-														 Language that is used is Java.
+													 </br>
+													 <p>Current jobs:</br>
+														 - Data Structures and Algorithms Instructional Assistant: (Since January 2020)</br>
+														 Instructional Assistant for a Data Structures and Algorithms course in UCSD.</br>
+														 Language that is used is Java.</br>
 														 Topics covered include: stacks, queues, linked lists, priority queues, heaps, BST, AVL trees,
-														 sorting algorithms, graph traversal (BFS, DFS, Djikstra's, and A*), and Huffman Compression
-														 Responsibilities include assisting students in programming assignments 
-														 and grading programs and exams.
-
-
-	Marketing and Communications Intern
-	Assisting in marketing and communications for the UCSD startup incubator, The Basement. Tasks include maintaining The Basement website, assisting in changes to the javascript code in OIC website, graphic design for marketing materials, and communications.
-</p>
-
+														 sorting algorithms, graph traversal (BFS, DFS, Djikstra's, and A*), and Huffman Compression.</br>
+														 Responsibilities include assisting students in programming assignments
+														 and grading programs and exams.</br></br>
+														 - Marketing and Communications Intern: (Since September 2019)</br>
+														 Assisting in marketing and communications for the UCSD
+														  startup incubator, The Basement. </br>
+															Tasks include maintaining The Basement website, assisting in changes to the javascript code in OIC website, graphic design for marketing materials, and communications.
+														</p>
 									</div>
 								</section>
 								<section class="tiles">
@@ -137,7 +132,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Maderlime 2019. All rights reserved. Design: HTML5 UP.</p>
+									<p class="copyright">&copy; Maderlime 2020. All rights reserved. Design: HTML5 UP.</p>
 								</footer>
 
 						</div>
