--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+
+		<link rel="shortcut icon" type="image/jpg" href="images/favicon.png"/>
 	</head>
 	<body class="is-preload">
 
@@ -21,8 +24,9 @@
 					<section id="main">
 						<header>
 							<img src="images/logo.png" alt="" width="50%"/>
+							<p style = "font-size:15px;	line-height: 1.2em;">Collaboration hub <br>for potholes near you</p>
+							<p><a href="https://devpost.com/software/sidetrack"> VISIT OUR DEVPOST HERE </a></p>
 
-							<p><a href="http://html5up.net"> VISIT OUR DEVPOST HERE </a></p>
 						</header>
 
 					</section>
@@ -30,7 +34,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; SIDETRACK CO</li><li> 2020 <a href="http://html5up.net"> USING HTML5 UP</a></li>
+							<li>&copy; SIDETRACK CO</li><li> 2020 WITH HTML5 <a href="http://html5up.net"> UP</a></li>
 						</ul>
 					</footer>
 
