--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<img src="images/logo.png" alt="" width="75%"/>
 							<p style = "font-size:15px;	line-height: 1.2em;">Collaboration hub <br>for potholes near you</p>
 							<p><a href="https://devpost.com/software/sidetrack"> VISIT OUR DEVPOST HERE </a></p>
-
+								<p><a href="https://github.com/Maderlime/lahacks_2020/tree/node-backend"> ~ download our app in github ~ </a></p>
 						</header>
 
 					</section>
