--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 							<p style = "font-size:15px;	line-height: 1.2em;">Collaboration hub <br>for potholes near you</p>
 							<p><a href="https://devpost.com/software/sidetrack"> VISIT OUR DEVPOST HERE </a></p>
 								<p><a href="https://github.com/Maderlime/lahacks_2020/tree/node-backend"> ~ download our app in github ~ </a></p>
+								<iframe width="100%"  src="https://www.youtube.com/embed/4b-cdxIXxQs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</header>
 
 					</section>
