--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 							<p style = "font-size:15px;	line-height: 1.2em;">Collaboration hub <br>for potholes near you</p>
 							<p><a href="https://devpost.com/software/sidetrack"> VISIT OUR DEVPOST HERE </a></p>
 								<p><a href="https://github.com/Maderlime/lahacks_2020/tree/node-backend"> ~ download our app in github ~ </a></p>
-<iframe width="100%" height = "100%" src="https://www.youtube.com/embed/vd6W_igBkhY" frameborder="1" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+								<iframe width="100%"  src="https://www.youtube.com/embed/vd6W_igBkhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <BR>
 								</header>
 
