--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 							<p><a href="https://devpost.com/software/sidetrack"> VISIT OUR DEVPOST HERE </a></p>
 								<p><a href="https://github.com/Maderlime/lahacks_2020/tree/node-backend"> ~ download our app in github ~ </a></p>
 								<iframe width="100%"  src="https://www.youtube.com/embed/vd6W_igBkhY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<BR>
+								<BR>
+								<br>
+								<br>
+								<p><a href="real_index/index.html"> Madeline Tjoa's Website </a></p>
 								</header>
 
 					</section>
