--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 								<BR>
 								<br>
 								<br>
-								<p><a href="real_index/index.html"> Madeline Tjoa's Website </a></p>
+								<p><a href="real_index/index.html"> Madeline Tjoa Website</a></p>
+								<p><a href="https://github.com/andrewcgraves"> Andrew Graves Github</a></p>
+								<p><a href="https://github.com/paulpan05"> Paul Pan Github</a></p>
+								<p><a href="https://github.com/freebreadstix"> Lucas Nguyen Github</a></p>
 								</header>
 
 					</section>
