--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 											<p>Data Scientist</p>
 										</header>
 										<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
-										<p>Currently working on firebase! https://madeline-website-project.firebaseapp.com/</p>
+										<p>Currently working on firebase! <a href = "https://madeline-website-project.firebaseapp.com/" >https://madeline-website-project.firebaseapp.com/</a></p>
+										<p>Check out my projects on devposts as well:<a href = "https://devpost.com/Maderlime?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"> https://devpost.com/Maderlime?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav</a> <br>
+										Next Hackathon: Hack the chain </p>
+										
+										<br><br>
+
 									</div>
 								</section>
 								<section class="tiles">
