--- a/java.html
+++ b/java.html
@@ -36,8 +36,9 @@
 										<header>
 											<h1>Java Projects</h1>
 											<p>Data structures and Algorithms in Java</p>
+
 										</header>
-										<p>Projects done in UCSD and intro to Java class</p>
+										<p>Projects done in UCSD and intro to Java class (UCSD Projects cannot be downloaded due to academic integrity reasons but can be shown upon request!</p>
 									</div>
 								</section>
 
@@ -414,7 +415,7 @@
 								        </article>
 
 								        <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa2-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa2-master.zip"> -->
 								            <div class="text">
 								              <h3>Interfaces, Abstract Classes, and Exception Handling (2019)</h3>
 								              <p> I worked with the concept of Interfaces, Abstract Classes,
@@ -429,11 +430,11 @@
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 
 								        <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa3-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa3-master.zip"> -->
 								            <div class="text">
 								              <h3>Doubly Linked Lists(2019)</h3>
 								              <p>  implement a Doubly-Linked List.
@@ -447,11 +448,11 @@
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 
 								           <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa4-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa4-master.zip"> -->
 								            <div class="text">
 								              <h3>Empircal Running Time, Sorting and Searching Algorithms(2019)</h3>
 								              <p> I implemented a binary search and Insertion sort, Merge Sort, and Quick sort.
@@ -461,12 +462,12 @@
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 
 
 								                           <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa5-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa5-master.zip"> -->
 								            <div class="text">
 								              <h3>Binary Search Trees(2019)</h3>
 								              <p> I implemented a binary search Tree Abstract Data Type.
@@ -476,12 +477,12 @@
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 
 
 								                           <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa6-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa6-master.zip"> -->
 								            <div class="text">
 								              <h3>Heaps, priority queue, and course scheduling(2019)</h3>
 								              <p> I implemented d-ary heaps to represent a priority queue.
@@ -489,18 +490,18 @@
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 
 								                   <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa7-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa7-master.zip"> -->
 								            <div class="text">
 								              <h3>Huffman Encoding and Compression(2019)</h3>
 								              <p> I implemented a classic lossless compression algorithm Huffman Encoding.
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 								                                   <article class="card">
 								          <a href="assets/JavaPlan/dsc30-pa8-master.zip">
@@ -515,7 +516,7 @@
 								          </a>
 								        </article>
 								                                   <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa9-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa9-master.zip"> -->
 								            <div class="text">
 								              <h3>Graph Traversal Algorithm (2019)</h3>
 								              <p> Built a navigation system using Depth first search, Breadth first search, Dijkstra, and A*.
@@ -524,10 +525,10 @@
 
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 								                                   <article class="card">
-								          <a href="assets/JavaPlan/dsc30-pa9-master.zip">
+								          <!-- <a href="assets/JavaPlan/dsc30-pa9-master.zip"> -->
 								            <div class="text">
 								              <h3>Minimum Spanning Tree(2019)</h3>
 								              <p>
@@ -535,7 +536,7 @@
 								             Also implemented a data structure Disjoint Set to help me implement Kruskal's algorithm and find a Minimum Spanning Tree for a given Graph.
 								              </p>
 								            </div>
-								          </a>
+								          <!-- </a> -->
 								        </article>
 
 								  </main>
