--- a/index.html
+++ b/index.html
@@ -28,6 +28,31 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
+									<style>
+									#parent {
+									  width: 75%;
+									  height: 400px;
+									  border:solid 1px #000;
+									}
+									iframe {
+									  width:120%;
+									  height:100%;
+									  border:0px;
+									}
+
+									#parent > img {
+									  opacity: 0.3;
+									  position:relative;
+									  float: center;
+									  right:10px;
+									  bottom:-50px;
+									  transition: 0.5s;
+									}
+									#parent > img {
+									  opacity: 1;
+									}
+									</style>
+
 								</header>
 
 							<!-- Banner -->
@@ -41,8 +66,37 @@
 										<p>Currently working on firebase! <a href = "https://madeline-website-project.firebaseapp.com/" >https://madeline-website-project.firebaseapp.com/</a></p>
 										<p>Check out my projects on devposts as well:<a href = "https://devpost.com/Maderlime?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"> https://devpost.com/Maderlime?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav</a> <br>
 										Next Hackathon: Hack the chain </p>
-										
+
 										<br><br>
+
+										<div id="parent">
+																<iframe title="Rhode Island well being Index"
+																aria-label="Map"
+																id="datawrapper-chart-zyBm6" src="https://datawrapper.dwcdn.net/zyBm6/1/"
+																scrolling="no" frameborder="0"
+																style="width: 0; min-width: 50%;
+																!important; border:none;" height="400">
+
+															</iframe>
+
+																<img src = "images/ptable.jpg" width=" 100%" style="margin-top:-100px;"></img>
+
+															</section>
+
+													</div>
+
+												<!-- Scripts -->
+													<script>
+														if ('addEventListener' in window) {
+															window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-preload\b/, ''); });
+															document.body.className += (navigator.userAgent.match(/(MSIE|rv:11\.0)/) ? ' is-ie' : '');
+														}
+													</script>
+
+											</body>
+										</div>
+
+
 
 									</div>
 								</section>
