--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
 									</ul>
 									<style>
 									#parent {
+										align-items: center
 									  width: 75%;
 									  height: 400px;
-									  border:solid 1px #000;
+									  border:solid none;
 									}
 									iframe {
 									  width:120%;
