--- a/flash.html
+++ b/flash.html
@@ -42,12 +42,12 @@
 								</section>
 
 
-								<section>
 
-								<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" style="width: 100%; height: 100%;" id="Index" ALIGN="">
-								<PARAM NAME=movie VALUE="assets/Java/Index.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#333399> <EMBED src="assets/Java/Index.swf" quality=high bgcolor=white style="width: 100%; height: 100%;" NAME="Index" ALIGN="" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></EMBED> </OBJECT>
 
-								</section>
+								<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" style="width: 100%; height: 600px;" id="Index" ALIGN="">
+								<PARAM NAME=movie VALUE="assets/Java/Index.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE=#333399> <EMBED src="assets/Java/Index.swf" quality=high bgcolor=white style="width: 100%; height: 600px;" NAME="Index" ALIGN="" TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/go/getflashplayer"></EMBED> </OBJECT>
+
+
 
 
 						</div>
