--- a/index.html
+++ b/index.html
@@ -60,13 +60,16 @@
 											<p>Data Scientist</p>
 										</header>
 										<p>A website of projects done by Madeline Tjoa from 2013 til now.</p>
-										<p>Currently working on firebase! <a href = "https://madeline-website-project.firebaseapp.com/" >https://madeline-website-project.firebaseapp.com/</a></p>
-										<p>Check out my projects on devposts as well:<a href = "https://devpost.com/Maderlime?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"> https://devpost.com/Maderlime?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav</a> <br>
-										Next Hackathon: Hack the chain </p>
-
+										<p>Check out my projects on devpost:<a href = "https://devpost.com/Maderlime"> devpost </a> </p>
+										<p>Check out my projects github:<a href = "https://github.com/Maderlime"> github</a> </p>
+										<p>Check out my Linkedin:<a href = "https://www.linkedin.com/in/madelinetjoa/"> linkedin</a> </p>
 										<br><br>
 
+
+										<br>
+
 										
+										<p>(don't mind this - it's a test)</p>
 										
 										<div id="parent">
 
@@ -82,6 +85,8 @@
 											<img src = "images/ptable.jpg" width=" 100%" style="margin-top:-100px;"></img>
 
 										</div>
+
+										<p>Currently working on firebase! <a href = "https://madeline-website-project.firebaseapp.com/" >https://madeline-website-project.firebaseapp.com/</a></p>
 
 							<!-- Scripts -->
 								<script>
