--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 										</div>
 
-										<p>Currently working on firebase! <a href = "https://madeline-website-project.firebaseapp.com/" >https://madeline-website-project.firebaseapp.com/</a></p>
+										<p>Currently working on firebase! <a href = "https://mtjoa-photography.web.app" >Click Here to view a Live gallery of photos.</a></p>
 
 							<!-- Scripts -->
 								<script>
