--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
 										<p>Check out my projects github:<a href = "https://github.com/Maderlime"> github</a> </p>
 										<p>Check out my Linkedin:<a href = "https://www.linkedin.com/in/madelinetjoa/"> linkedin</a> </p>
 										<br><br>
-			
+										<section>
 										<iframe src="https://mtjoa-photography.web.app"
 								    			title="Photography Web app" width="100%" height="500">
 										</iframe>
+										</section>
 										<br>
 
 										
