--- a/index.html
+++ b/index.html
@@ -64,11 +64,13 @@
 										<p>Check out my projects github:<a href = "https://github.com/Maderlime"> github</a> </p>
 										<p>Check out my Linkedin:<a href = "https://www.linkedin.com/in/madelinetjoa/"> linkedin</a> </p>
 										<br><br>
+										</section>
 										<section>
 										<iframe src="https://mtjoa-photography.web.app"
 								    			title="Photography Web app" width="100%" height="500">
 										</iframe>
 										</section>
+										<section id="banner">
 										<br>
 
 										
