--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										</section>
 										<section>
 										<iframe src="https://mtjoa-photography.web.app"
-								    			title="Photography Web app" width="100%" height="500">
+								    			title="Photography Web app" width="100%" height="500px">
 										</iframe>
 										</section>
 										<section id="banner">
