--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 										<p>Check out my Linkedin:<a href = "https://www.linkedin.com/in/madelinetjoa/"> linkedin</a> </p>
 										<br><br>
 										</section>
-										<section style="height: 500px">
+										<section style="height: 500px; width: 80%">
 										<iframe src="https://mtjoa-photography.web.app"
 								    			title="Photography Web app" width="100%" height="500px">
 										</iframe>
