--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 								<header id="header">
 									<a href="index.html" class="logo"><strong>Madeline</strong> Tjoa</a>
 
-<!-- 									<!-- For Rhode Island Well being index -->
+<!-- 							
+							For Rhode Island Well being index
 									<style>
 										#parent {
 											align-items: center
